home to index in navbar

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 
 
         <div class="topnav">
-            <a class="active" href="home.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="about us.html">about us</a>
             <a href="contact.html">contact</a>
             <a href="menu.html">menu</a>
