--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ footer{
  <body>
 
 <div class="topnav">
-    <a class="active" href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about us.html">about us</a>
     <a href="contact.html">contact</a>
     <a href="menu.html">menu</a>
