--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -12,7 +12,8 @@
 
 <style>
     body {
-        background-image: url(back1.avif);
+        background-image: url(backgrounds/back1.avif);
+        color: white;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
@@ -107,15 +108,19 @@
 
 <body>
 
+
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="about us.html">about us</a>
         <a href="contact.html">contact</a>
         <a href="menu.html">menu</a>
         <a href="gallery.html">gallery</a>
-
-
     </div>
+
+
+
+
+
 
 
 
