--- a/menu.html
+++ b/menu.html
@@ -27,11 +27,13 @@
         }
 
         body {
-            background-image: url(back1.avif);
-            background-repeat: no-repeat;
+            background-image: url(backgrounds/back1.avif);
+            color: white;
             background-attachment: fixed;
+            background-repeat: no-repeat;
             background-size: cover;
         }
+
 
         h2 {
             font-family: courier;
