--- a/about us.html
+++ b/about us.html
@@ -25,11 +25,13 @@
     }
 
     body {
-      background-image: url(back1.avif);
-      background-repeat: no-repeat;
+      background-image: url(backgrounds/back1.avif);
+      color: white;
       background-attachment: fixed;
+      background-repeat: no-repeat;
       background-size: cover;
     }
+
 
     footer {
       background-color: rgb(50, 25, 10);
