--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,10 @@
     <title>CONTACT FORM</title>
     <style>
         body {
-            background-image: url(back1.avif);
-            background-repeat: no-repeat;
+            background-image: url(backgrounds/back1.avif);
+            color: white;
             background-attachment: fixed;
+            background-repeat: no-repeat;
             background-size: cover;
         }
 
